# xzarrguard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini  zensical.toml
.github/workflows/: docs.yml
docs/: api.md  cli.md  contributing.md  index.md  manifest.md
recipe/: README.md  meta.yaml
scripts/: benchmark_check.py
src/xzarrguard/: __init__.py  cli.py  create.py  integrity.py  layout.py  manifest.py  models.py
tests/: test_cli.py  test_integrity.py  test_layout.py
