[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "xzarrguard"
dynamic = ["version"]
description = "Integrity checks and creation helpers for Zarr v3 stores"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jan Haacker", email = "152862650+j-haacker@users.noreply.github.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "xarray>=2024.9.0",
  "zarr>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/j-haacker/xzarrguard"
Repository = "https://github.com/j-haacker/xzarrguard"
Issues = "https://github.com/j-haacker/xzarrguard/issues"
Documentation = "https://github.com/j-haacker/xzarrguard#readme"

[project.scripts]
xzarrguard = "xzarrguard.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.0",
  "tox>=4.0.0",
  "twine>=5.1.1",
  "zensical",
]

[tool.hatch.version]
path = "src/xzarrguard/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q --cov=xzarrguard --cov-report=term-missing --cov-report=xml:coverage.xml"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["xzarrguard"]

[tool.coverage.report]
skip_covered = true
show_missing = true
